--- a/index.html
+++ b/index.html
@@ -652,80 +652,101 @@ I need you here
 I need to see you smile</pre></div>
     </div>
 
-   <div class="song" onclick="playSong('song13')">
-      <img src="simop.jpg" alt="Cover 8">
-      <div class="title">Flesh - Simon Curtis</div>
+  <div class="song" onclick="playSong('song12')">
+      <img src="casual.png" alt="Cover 8">
+      <div class="title">Dan Kusari -break- - Megumi Ogata</div>
       <div class="lyrics"><pre>Lyrics:
         
-This is not the way into my heart, into my head
-Into my brain, into none of the above
-This is just my way of unleashing the feelings deep inside of me
-This spark of black that I seem to love
+You, there on the bridge
+Where've you been, what's your name?
+And you, there on the wall
+Where will you go to, once you fall?
+You, lost at sea
+Do you need me, do you need directions?
+Hey, put down the gun
+What are you thinking?
+You were someone's son
 
-We can get a little crazy just for fun, just for fun
-Don't even try to hold it back, just let go
-Tie me up and take me over till you're done, 'til I'm done
-You got me feening and I'm ready to blow
+The taste of tears
+The sting of pain
+The smell of fear
+The sounds of crying, oh
 
-Push up to my body, sink your teeth into my flesh
-(Get undressed, t-taste the flesh)
-Bite into me harder, sink your teeth into my flesh
-(Pass the test, t-taste the flesh)
+A long, long time ago, I fell to this place
+From another dimension
+And thrust amongst the beasts
+And the way they behave, it borders on dementia
+Now through all these years
+I can barely take it
+I don't think I can make it
+Take me away from here
+I want to go home
+I'm so sick and tired of
 
-Hold me up against the wall
-Give it 'til I beg, give me some more
-Make me bleed, I like it rough
-Like it rough, rough, rough
+The taste of tears
+The sting of pain
+The smell of fear
+The sounds of crying, oh
 
-Push up to my body, sink your teeth into my flesh
+As you're standing at the edge of your life
+What do you remember?
+Was it all you wanted?
 
-Hold my hands above my head and push my face into the bed
-'Cause I'm a screamer baby, make me a mute
-You put your hand upon my neck and feel the pulse beat-beat-beat-beat
-It's like a trigger getting ready to shoot
+I'm trying to earn a set of feathery wings
+I wish I could protect you here
+Oh, please don't cry, now, smile
+As you're standing at the edge of your life
+Your troubles are over
+Mine are just beginning
 
-Wanna wrestle with me baby, here's a sneak little peak
-You can dominate the game 'cause I'm tough
-I don't play around that often, when I do, I'm a freak
-So you'd better believe I like it rough
+I'm trying to earn a set of feathery wings
+To take me away from here
+It's me you leave behind
 
-Push up to my body, sink your teeth into my flesh
-(Get undressed, t-taste the flesh)
-Bite into me harder, sink your teeth into my flesh
-(Pass the test, t-taste the flesh)
+Oh, if only I could have been there
+I'd be a hand for the sinking
+If only I could have been there
+I'd be a prayer for the dying
+See the pain etched in my face,
+Oh, I'm so sick and tired of
 
-Hold me up against the wall
-Give it 'til I beg, give me some more
-Make me bleed, I like it rough
-Like it rough, rough, rough
+The taste of tears
+The sting of pain
+The smell of fear
+The sounds of crying, oh
 
-Push up to my body, sink your teeth into my flesh
+As you're standing at the edge of your life
+What do you remember?
+Was it all you wanted?
 
-Hold me down and make me scream
-Lay me on the floor
-Turn me on and take me out
-Make me beg for more
+I'm trying to earn a set of feathery wings
+I wish I could protect you here
+Oh, please don't cry, now, smile
+As you're standing at the edge of your life
+Your troubles are over
+Mine are just beginning
 
-Push up to my body, sink your teeth into my flesh
-(Get undressed, t-taste the flesh)
-Bite into me harder, sink your teeth into my flesh
-(Pass the test, t-taste the flesh)
+I'm trying to earn a set of feathery wings
+To take me away from here
+It's me you leave--
 
-Hold me up against the wall
-Give it 'til I beg, give me some more
-Make me bleed, I like it rough
-Like it rough, rough, rough
+You're gone from here
+Don't leave from here
+Don't leave me here
+I hate it here
+You're gone from here
+Don't leave me here
+I need you here
+I need to see you smile</pre></div>
+    </div>
 
-Push up to my body, sink your teeth into my flesh
+    
 
-Push up to my body, sink your teeth into my flesh
-(Get undressed, t-taste the flesh)
-Bite into me harder, sink your teeth into my flesh
-(Pass the test, t-taste the flesh)
+   <div class="song" onclick="playSong('song13')">
+      <img src="flesh.png" alt="Cover 8">
+      <div class="title">Out Of Control - She Wants Revenge</div>
+      <div class="lyrics"><pre>Lyrics:
 
-Hold me up against the wall
-Give it 'til I beg, give me some more
-Make me bleed, I like it rough
 Like it rough, rough, rough
 
 Push up to my body, sink your teeth into my flesh
@@ -949,7 +970,8 @@ Heaven Aid</pre></div>
       song9: { title: "Take the World", desc: "Why I picked song 9...", file: "y2mate--Take-the-World.mp3", image: "kg.png" },
       song8: { title: "Romantic ga Tomaranai", desc: "Why I picked song 8...", file: "y2mate.com - Aoba Kuronuma  Character Song Romanticが止まらない.mp3", image: "gakugamu.png" },
       song12: { title: "Feathery Wings", desc: "Why I picked song 8...", file: "y2mate--Feathery-Wings.mp3", image: "resolution.png" },
-      song13: { title: "Flesh", desc: "Why I picked song 8...", file: "y2mate--Flesh.mp3", image: "flesh.png" },
+      song16: { title: "Dan Kusari -break-", desc: "Why I picked song 8...", file: "断鎖 -break-.mp3", image: "Dummy.jpg" },
+      song13: { title: "Out Of Control", desc: "Why I picked song 8...", file: "Out Of Control 4.mp3", image: "Outof.jpg" },
       song14: { title: "Kimi no Kioku", desc: "Why I picked song 8...", file: "y2mate--Persona-3-OST-Memories-of-You-キミの記憶-With-Lyrics.mp3", image: "coffin.png" },
       song15: { title: "Monitoring (Best Friend Remix)", desc: "Why I picked song 8...", file: "y2mate--DECO27-モニタリング-Best-Friend-Remix-feat-初音ミク (1).mp3", image: "deco.png" },
       song11: { title: "Only finally there is the free end", desc: "Why I picked song 11...", file: "y2mate.com - ONLY FINALLY THERE IS THE FREE END  GOATBED HQ DRAMAtical Murder OST ENDING.mp3", image: "sf.png" }
