--- a/index.html
+++ b/index.html
@@ -652,8 +652,8 @@ I need you here
 I need to see you smile</pre></div>
     </div>
 
-  <div class="song" onclick="playSong('song12')">
-      <img src="casual.png" alt="Cover 8">
+  <div class="song" onclick="playSong('song16')">
+      <img src="Dummy.jpg" alt="Cover 8">
       <div class="title">Dan Kusari -break- - Megumi Ogata</div>
       <div class="lyrics"><pre>Lyrics:
         
@@ -743,7 +743,7 @@ I need to see you smile</pre></div>
     
 
    <div class="song" onclick="playSong('song13')">
-      <img src="flesh.png" alt="Cover 8">
+      <img src="Outof.jpg" alt="Cover 8">
       <div class="title">Out Of Control - She Wants Revenge</div>
       <div class="lyrics"><pre>Lyrics:
 
@@ -970,8 +970,8 @@ Heaven Aid</pre></div>
       song9: { title: "Take the World", desc: "Why I picked song 9...", file: "y2mate--Take-the-World.mp3", image: "kg.png" },
       song8: { title: "Romantic ga Tomaranai", desc: "Why I picked song 8...", file: "y2mate.com - Aoba Kuronuma  Character Song Romanticが止まらない.mp3", image: "gakugamu.png" },
       song12: { title: "Feathery Wings", desc: "Why I picked song 8...", file: "y2mate--Feathery-Wings.mp3", image: "resolution.png" },
-      song16: { title: "Dan Kusari -break-", desc: "Why I picked song 8...", file: "断鎖 -break-.mp3", image: "Dummy.jpg" },
-      song13: { title: "Out Of Control", desc: "Why I picked song 8...", file: "Out Of Control 4.mp3", image: "Outof.jpg" },
+      song16: { title: "Dan Kusari -break-", desc: "Why I picked song 8...", file: "断鎖 -break-.mp3", image: "casual.png" },
+      song13: { title: "Out Of Control", desc: "Why I picked song 8...", file: "Out Of Control 4.mp3", image: "flesh.png" },
       song14: { title: "Kimi no Kioku", desc: "Why I picked song 8...", file: "y2mate--Persona-3-OST-Memories-of-You-キミの記憶-With-Lyrics.mp3", image: "coffin.png" },
       song15: { title: "Monitoring (Best Friend Remix)", desc: "Why I picked song 8...", file: "y2mate--DECO27-モニタリング-Best-Friend-Remix-feat-初音ミク (1).mp3", image: "deco.png" },
       song11: { title: "Only finally there is the free end", desc: "Why I picked song 11...", file: "y2mate.com - ONLY FINALLY THERE IS THE FREE END  GOATBED HQ DRAMAtical Murder OST ENDING.mp3", image: "sf.png" }
