--- a/index.html
+++ b/index.html
@@ -657,87 +657,43 @@ I need to see you smile</pre></div>
       <div class="title">Dan Kusari -break- - Megumi Ogata</div>
       <div class="lyrics"><pre>Lyrics:
         
-You, there on the bridge
-Where've you been, what's your name?
-And you, there on the wall
-Where will you go to, once you fall?
-You, lost at sea
-Do you need me, do you need directions?
-Hey, put down the gun
-What are you thinking?
-You were someone's son
+「You got the power」
 
-The taste of tears
-The sting of pain
-The smell of fear
-The sounds of crying, oh
+“Bashing & Mounting & Disrespect:
 
-A long, long time ago, I fell to this place
-From another dimension
-And thrust amongst the beasts
-And the way they behave, it borders on dementia
-Now through all these years
-I can barely take it
-I don't think I can make it
-Take me away from here
-I want to go home
-I'm so sick and tired of
+it’s a big invite and a usual request.
 
-The taste of tears
-The sting of pain
-The smell of fear
-The sounds of crying, oh
+In a ill witted world without malice, I’m searching with a smile my prey.”
 
-As you're standing at the edge of your life
-What do you remember?
-Was it all you wanted?
+Just YOU who was chosen, boy
 
-I'm trying to earn a set of feathery wings
-I wish I could protect you here
-Oh, please don't cry, now, smile
-As you're standing at the edge of your life
-Your troubles are over
-Mine are just beginning
+Play…no,“prey”er
 
-I'm trying to earn a set of feathery wings
-To take me away from here
-It's me you leave behind
+One’s turn is sudden, and no one can escape from being a target.
 
-Oh, if only I could have been there
-I'd be a hand for the sinking
-If only I could have been there
-I'd be a prayer for the dying
-See the pain etched in my face,
-Oh, I'm so sick and tired of
+Ward off the head wind, entwine lives.
 
-The taste of tears
-The sting of pain
-The smell of fear
-The sounds of crying, oh
+Don’t shut yourself in loneliness, open your eyes.
 
-As you're standing at the edge of your life
-What do you remember?
-Was it all you wanted?
+A desperate anomie isn’t a metaphor of the God of Justice.
 
-I'm trying to earn a set of feathery wings
-I wish I could protect you here
-Oh, please don't cry, now, smile
-As you're standing at the edge of your life
-Your troubles are over
-Mine are just beginning
+Straight in the middle of wind, without turning back.
 
-I'm trying to earn a set of feathery wings
-To take me away from here
-It's me you leave--
+Draw the curtains and the chain of flames: the grand finale of this tragic comedy.
 
-You're gone from here
-Don't leave from here
-Don't leave me here
-I hate it here
-You're gone from here
-Don't leave me here
-I need you here
-I need to see you smile</pre></div>
+「Let’s over the show」
+
+As you face the head wind, entwine lives.
+
+Don’t fall into loneliness, reach out.
+
+A desperate anomie isn’t the Messiah of an Absolute Justice.
+
+Accept the wind, and keep going relentless––
+
+When the invisible darkness is cut, we will be flooded with dazzling light.
+
+Let’s go together toward the unknown future.</pre></div>
     </div>
 
     
