--- a/index.html
+++ b/index.html
@@ -691,21 +691,59 @@ Let’s go together toward the unknown future.</pre></div>
       <div class="title">Out Of Control - She Wants Revenge</div>
       <div class="lyrics"><pre>Lyrics:
 
-Like it rough, rough, rough
+With her high heel against the wall
+Kind of dancing though not at all
+She had stockings running up to her thigh
+Snaps her fingers to keep the time
 
-Push up to my body, sink your teeth into my flesh
+From the back of the room I saw her there
+I said she wants to be alone and I shouldn't dare
+But then she noticed me glance at her
+I had no choice but to dance with her
 
-Push up to my body, sink your teeth into my flesh
-(Get undressed, t-taste the flesh)
-Bite into me harder, sink your teeth into my flesh
-(Pass the test, t-taste the flesh)
+The lights that move sideways and up and down
+The beat takes you over and spins you round
+Our hearts steady-beating, the sweat turns to cold
+We're slaves to the DJ and out of control
 
-Hold me up against the wall
-Give it 'til I beg, give me some more
-Make me bleed, I like it rough
-Like it rough, rough, rough
+I watched her feet move, her hips they sway
+Does a hair flip, then starts to say
+"Oh my God, it's my favorite song,"
+I pull her close, and she sings along
 
-Push up to my body, sink your teeth into my flesh</pre></div>
+We can't slow down, even if we tried
+If the record keeps spinning, so will I
+She likes disco, and tastes like a tear
+Tells me, don't stop dancing, and she's pulling me near
+
+The lights that move sideways and up and down
+The beat takes you over and spins you round
+Our hearts steady-beating, the sweat turns to cold
+We're slaves to the DJ and out of control
+
+We've got nowhere to go, we've got nothing to prove
+Instead of dancing alone I should be dancing with you
+This song is turning me on, the beat is doing me in
+Or maybe it's only you, but either way, let's begin
+
+We've got nowhere to go, we've got nothing to prove
+Instead of dancing alone I should be dancing with you
+This song is turning me on, the beat is doing me in
+Or maybe it's only you, but either way, let's begin
+
+We've got nowhere to go, we've got nothing to prove
+Instead of dancing alone I should be dancing with you
+This song is turning me on, the beat is doing me in
+Or maybe it's only you, but either way, let's begin
+
+The lights that move sideways and up and down
+The beat takes you over and spins you round
+Our hearts steady-beating, the sweat turns to cold
+We're slaves to the DJ and out of control
+The lights that move sideways and up and down
+The beat takes you over and spins you round
+Our hearts steady-beating, the sweat turns to cold
+We're slaves to the DJ and out of control</pre></div>
     </div>
 
   <div class="song" onclick="playSong('song14')">
