--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     .playlist {
       width: 45%;
-      height: 100vh; /* each side scrolls on its own */
+      height: 100vh; 
       overflow-y: auto;
       padding: 20px;
       border-right: 2px solid #333;
@@ -64,7 +64,7 @@
     .details {
       width: 55%;
       padding: 20px;
-      height: 100vh; /* each side scrolls on its own */
+      height: 100vh; 
       overflow-y: auto;
       background: rgba(0, 0, 0, 0.8);
     }
@@ -88,7 +88,7 @@
 <body>
   <!-- LEFT SIDE: PLAYLIST -->
   <div class="playlist">
-    <!-- SONGS in new order -->
+
 
     <!-- 1. Deslash -->
     <div class="song" onclick="playSong('song1')">
